test/spec_vectors/simd_splat/fail/module_14.wat
(module (func (result v128) i64x2.splat (i32.const 0)))